--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,16 @@
         <item>Title 8</item>
         <item>Title 9</item>
         <item>Title 10</item>
+        <item>Title 11</item>
+        <item>Title 12</item>
+        <item>Title 13</item>
+        <item>Title 14</item>
+        <item>Title 15</item>
+        <item>Title 16</item>
+        <item>Title 17</item>
+        <item>Title 18</item>
+        <item>Title 19</item>
+        <item>Title 20</item>
     </string-array>
 
     <string-array name="descriptions">
@@ -28,5 +38,15 @@
         <item>Description 8</item>
         <item>Description 9</item>
         <item>Description 10</item>
+        <item>Description 11</item>
+        <item>Description 12</item>
+        <item>Description 13</item>
+        <item>Description 14</item>
+        <item>Description 15</item>
+        <item>Description 16</item>
+        <item>Description 17</item>
+        <item>Description 18</item>
+        <item>Description 19</item>
+        <item>Description 20</item>
     </string-array>
 </resources>
